src/parser/snapshots/almond__parser__expression__tests__expr_bp_infix_str_concat-4.snap
---
source: src/parser/expression.rs
expression: "parse_expr(r#\"[] + {}\"#.into()).unwrap().1"
---
{
  "type": "BinaryExpression",
  "operator": "+",
  "left": {
    "type": "ArrayExpression",
    "elements": [],
    "start": 0,
    "end": 2
  },
  "right": {
    "type": "ObjectExpression",
    "properties": [],
    "start": 5,
    "end": 7
  },
  "start": 0,
  "end": 7
}
