src/parser/snapshots/almond__parser__expression__tests__expr_bp_no_seq.snap
---
source: src/parser/expression.rs
expression: "parse_expr_no_seq(\"x, y\".into()).unwrap().1"
---
{
  "type": "Identifier",
  "name": "x",
  "start": 0,
  "end": 1
}
