src/parser/snapshots/almond__parser__expression__tests__expr_bp_postfix.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x++\".into()).unwrap().1"
---
{
  "type": "UpdateExpression",
  "operator": "++",
  "argument": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "prefix": false,
  "start": 0,
  "end": 3
}
