src/parser/snapshots/almond__parser__expression__tests__expr_bp_prefix-11.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"await foo\".into()).unwrap().1"
---
{
  "type": "AwaitExpression",
  "argument": {
    "type": "Identifier",
    "name": "foo",
    "start": 6,
    "end": 9
  },
  "start": 0,
  "end": 9
}
