src/parser/snapshots/almond__parser__expression__tests__expr_bp_prefix-2.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"+1\".into()).unwrap().1"
---
{
  "type": "UnaryExpression",
  "operator": "+",
  "prefix": true,
  "argument": {
    "type": "Literal",
    "value": 1.0,
    "start": 1,
    "end": 2
  },
  "start": 0,
  "end": 2
}
