src/parser/snapshots/almond__parser__expression__tests__expr_bp_prefix-6.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"typeof x\".into()).unwrap().1"
---
{
  "type": "UnaryExpression",
  "operator": "typeof",
  "prefix": true,
  "argument": {
    "type": "Identifier",
    "name": "x",
    "start": 7,
    "end": 8
  },
  "start": 0,
  "end": 8
}
